--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1982,7 +1982,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #01b83c;
+  background: #dbff3c;
 }
 .links-of-blogroll {
   font-size: 13px;
